# Data_LG

./: .env.example  .env.simple  .gitignore  Makefile  README.md  api_spec.md  branch_test.md  codex_opti_explain.md  docker_install.sh  documentation_developer.md  documentation_user.md  install.sh  plan.md  prompt.md  reference.md  run.sh  setup.sh  setup_260405.sh  smolagent_change_plan.md  start.sh  start_260405.sh  super prompt.txt  계산로직.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/agent/: context.py  executor.py  finalize.py  model.py  orchestrator.py  preflight.py  runner.py
backend/app/agent/agents/: eda_agent.py  followup_agent.py
backend/app/agent/callbacks/: cancellation.py  evaluate.py  persist.py  progress.py  workdir.py
backend/app/agent/prompts/: eda_agent_system.md  followup_agent_system.md  orchestrator_system.md
backend/app/agent/tools/: base.py  baseline_modeling_tool.py  create_dataframe_tool.py  inverse_optimization_tool.py  load_artifact_tool.py  load_dataframe_tool.py  optimization_tool.py  profile_tool.py  shap_tool.py  simplify_model_tool.py  subset_discovery_tool.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: admin.py  analysis.py  artifacts.py  auth.py  branches.py  datasets.py  jobs.py  modeling.py  monitor.py  optimization.py  sessions.py  steps.py
backend/app/core/: config.py  logging.py  security.py  version.py
backend/app/db/: base.py  seed.py
backend/app/db/models/: __init__.py  artifact.py  audit.py  auth.py  base.py  branch.py  dataset.py  job.py  model_run.py  optimization.py  session.py  step.py  user.py
backend/app/db/repositories/: artifact.py  base.py  dataset.py  job.py  model_run.py  optimization.py  session.py  step.py  user.py
backend/app/graph/: __init__.py  helpers.py  learning.py  llm_client.py  main.py  pandasai_runner.py  sandbox.py  state.py
backend/app/graph/nodes/: __init__.py  classify_intent.py  evaluate.py  load_context.py  persist.py  resolve_reference.py  summarize.py  validate.py
backend/app/graph/subgraphs/: __init__.py  create_dataframe.py  eda.py  followup.py  inverse_optimize.py  modeling.py  optimization.py  profile.py  shap_simplify.py  subset_discovery.py
backend/app/schemas/: analysis.py  artifact.py  auth.py  common.py  dataset.py  job.py  modeling.py  optimization.py  session.py  step.py
backend/app/services/: artifact_service.py  artifact_store.py  builtin_registry.py  dataset_service.py  lineage_service.py  preview_builder.py  profile_service.py  session_service.py
backend/app/worker/: bcm_model.py  cancellation.py  inverse_optimize_tasks.py  job_runner.py  progress.py  queue.py  tasks.py
backend/data/: app.db
backend/data/artifacts/: learning.md  learning_data.json
backend/data/artifacts/b207d4b3-c15c-4be9-bd51-74d8ef224a54/9b7fc49b-bb72-4827-bfdf-d8941b127bc0/: data.parquet
backend/tests/: conftest.py  test_analysis.py  test_artifacts.py  test_auth.py  test_datasets.py  test_jobs.py  test_modeling.py  test_optimization.py  test_sessions.py  test_subset_discovery.py
backend/tests/agent/: test_callbacks_progress_cancel.py  test_context.py  test_evaluate_callback.py  test_executor.py  test_finalize.py  test_model.py  test_orchestrator.py  test_preflight.py  test_recorder.py  test_runner.py  test_tool_base.py  test_workdir_callback.py
backend/tests/agent/agents/: test_eda_followup_agents.py
backend/tests/agent/tools/: conftest.py  test_baseline_modeling_tool.py  test_create_dataframe_tool.py  test_inverse_optimization_tool.py  test_load_artifact_tool.py  test_load_dataframe_tool.py  test_optimization_tool.py  test_profile_tool.py  test_shap_simplify_tools.py  test_subset_discovery_tool.py
frontend/: Dockerfile  pyproject.toml
frontend/app/: main.py
(+228 files in other folders)
