[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regression-platform-frontend"
version = "0.1.0"
description = "다중 턴 테이블형 회귀 분석 플랫폼 프론트엔드"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
